[gd_scene load_steps=12 format=2]

[ext_resource path="res://game_objects/Crosshair.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_objects/FlyingSkull.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_objects/ShellCount.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_objects/ShellSprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameNode.gd" type="Script" id=5]
[ext_resource path="res://assets/hp_front.png" type="Texture" id=6]
[ext_resource path="res://assets/hp_back.png" type="Texture" id=7]
[ext_resource path="res://assets/sw_bg.png" type="Texture" id=8]
[ext_resource path="res://game_objects/ShotExplosionEffect.tscn" type="PackedScene" id=9]
[ext_resource path="res://game_objects/Shotgun.tscn" type="PackedScene" id=10]
[ext_resource path="res://pixel_font.tres" type="DynamicFont" id=11]

[node name="GameNode" type="Node"]
script = ExtResource( 5 )
crosshair_path = NodePath("GameNode2D/Crosshair")
flying_skull_packed = ExtResource( 2 )
hp_bar_path = NodePath("Control/HPBar")
shotgun_path = NodePath("GameNode2D/Shotgun")
score_label_path = NodePath("Control/MarginContainer/Panel/MarginContainer/ScoresLabel")

[node name="GameNode2D" type="Node2D" parent="."]

[node name="BG" type="Sprite" parent="GameNode2D"]
scale = Vector2( 3.4, 3.4 )
texture = ExtResource( 8 )
centered = false

[node name="SpawnRect" type="Position2D" parent="GameNode2D"]
position = Vector2( 166, 119 )

[node name="RectSize" type="Position2D" parent="GameNode2D/SpawnRect"]
position = Vector2( 439, 245 )

[node name="Enemies" type="Node2D" parent="GameNode2D"]

[node name="Crosshair" parent="GameNode2D" instance=ExtResource( 1 )]
shell_count_path = NodePath("../../Control/ShellCount")
shell_sprite_packed = ExtResource( 4 )
shot_explosion_effect_packed = ExtResource( 9 )

[node name="Shotgun" parent="GameNode2D" instance=ExtResource( 10 )]
position = Vector2( 557, 360 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShellCount" parent="Control" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -131.0
margin_bottom = 0.0

[node name="HPBar" type="TextureProgress" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -180.0
margin_bottom = 180.0
max_value = 6.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0.427451, 0.278431, 0.180392, 1 )
tint_over = Color( 0.0666667, 0.941176, 0.121569, 1 )
tint_progress = Color( 0.360784, 0.576471, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
margin_left = 24.0
margin_top = 17.0
margin_right = 313.0
margin_bottom = 72.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
margin_right = 289.0
margin_bottom = 55.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -20.5
margin_right = 119.5
margin_bottom = 19.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoresLabel" type="Label" parent="Control/MarginContainer/Panel/MarginContainer"]
margin_top = 4.0
margin_right = 244.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 11 )
text = "Scores: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
